--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,24 @@ services:
     command: 'lein ring server'
     volumes:
       - '.:/app'
+      - maven-repository:/root/.m2
     depends_on:
       - mongo
 
   mongo:
     image: mongo
+    volumes:
+      - mongo-db:/data/db
 
 networks:
   nginx:
     external:
       name: nginx_default
+
+volumes:
+  maven-repository:
+    external:
+      name: maven-repository
+
+  mongo-db:
+    driver: local
